# IISAIA

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  package-lock.json  package.json  pyproject.toml
.claude/commands/: build-class.md
_config/theme/: components.css
semanas/01/: CONTEXT.md
semanas/02/: CONTEXT.md
semanas/03/: CONTEXT.md  plan.md  spine.md
semanas/04/: CONTEXT.md  plan.md  spine.md
semanas/04/demo-repo/: .env.example  .gitignore  CLAUDE.md  README.md  openapi.yaml  pyproject.toml
semanas/04/demo-repo/.claude/: settings.json  settings.local.json.example
semanas/04/demo-repo/.claude/agents/: researcher.md
semanas/04/demo-repo/.claude/commands/: add-endpoint.md
semanas/04/demo-repo/.claude/rules/: api.md  code-style.md  security.md  testing.md
semanas/04/demo-repo/.claude/skills/add-endpoint/: SKILL.md
semanas/04/demo-repo/backend/: main.py
semanas/04/demo-repo/backend/db/: client.py
semanas/04/demo-repo/backend/middleware/: auth.py
semanas/04/demo-repo/backend/routers/: posts.py  users.py
semanas/04/demo-repo/backend/schemas/: models.py
semanas/04/demo-repo/frontend/: app.js  index.html  styles.css
semanas/04/demo-repo/scripts/: export_openapi.py
semanas/04/demo-repo/tests/: test_posts.py  test_users.py
semanas/05/: CONTEXT.md  plan.md  spine.md
semanas/06/: CONTEXT.md
semanas/07/: CONTEXT.md
semanas/08/: CONTEXT.md
shared/patterns/: README.md  chat-mockup.html  clickable-steps.html  code-walkthrough.html  comparison-2col.html  data-table.html  five-questions-card.html  flow-with-arrows.html  metaphor-pages.html  (+3 more)
(+118 files in other folders)
